fix arial black on firefox

--- a/assets/less/page/onboarding.less
+++ b/assets/less/page/onboarding.less
@@ -46,7 +46,7 @@
         border: 3px solid @dark-gray;
         float: left;
         border-radius: 50% 50%;
-        font-family: @montserrat;
+        font-family: @montserrat!important;
         text-align: center;
     }
 
@@ -167,16 +167,18 @@
         border-top: 0;
 
         .number{
-            font-family: Arial-Black;
+            font-family: "Arial-Black",Arial;
             font-size: 96px;
             text-align: center;
+            font-weight: 900;
         }
 
         .days{
-            font-family: Arial-Black;
+            font-family: "Arial-Black",Arial;
             font-size: 64px;
             text-align: center;
             text-transform: uppercase;
+            font-weight: 900;
         }
     }
 
